--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,16 @@ projeto_fotovoltaico/
 projeto_tcc/
 teste.ipynb
 .devcontainer/
+orientador\tcc_foto-original_orientador.ipynb
+AED.ipynb
+ideia_inicial_tcc_foto.ipynb
+Modelos.ipynb
+novo_conceito.ipynb
+README.md
+tcc_foto.ipynb
+orientador\tcc_foto-original_orientador test.ipynb
+orientador\tudo do orientador
+orientador\.ipynb_checkpoints
+datasets\campinas\test.ipynb
+a ser não utilizado
+.vscode
