--- a/.gitignore
+++ b/.gitignore
@@ -35,23 +35,24 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-Explain text
 
-=4.0.0
+# Ignorar pastas específicas #
 projeto_fotovoltaico/
 projeto_tcc/
-teste.ipynb
 .devcontainer/
-orientador\tcc_foto-original_orientador.ipynb
+.vscode
+
+# Ignorar arquivos específicos #
+teste.ipynb
+orientador/tcc_foto-original_orientador.ipynb
 AED.ipynb
 ideia_inicial_tcc_foto.ipynb
 Modelos.ipynb
 novo_conceito.ipynb
 README.md
 tcc_foto.ipynb
-orientador\tcc_foto-original_orientador test.ipynb
-orientador\tudo do orientador
-orientador\.ipynb_checkpoints
-datasets\campinas\test.ipynb
+orientador/tcc_foto-original_orientador test.ipynb
+orientador/tudo do orientador
+orientador/.ipynb_checkpoints
+datasets/campinas/test.ipynb
 a ser não utilizado
-.vscode
