--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ orientador/tudo do orientador
 orientador/.ipynb_checkpoints
 datasets/campinas/test.ipynb
 a ser não utilizado
+// filepath: /C:\Users\Artem\tcc_fotovoltaica_camp\.vscode
